# DomainScout

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  criteria.toml  pyproject.toml
docs/: PHASE-1-DESIGN.md  PHASE-2-DESIGN.md  PHASE-3-DESIGN.md  PHASE-4-DESIGN.md  PHASE-5A-DESIGN.md  PHASE-5B-DESIGN.md  PHASE-5B-SPIKE.md  TECHNICAL-DESIGN.md
docs/superpowers/plans/: 2026-07-14-phase-1-skeleton.md  2026-07-14-phase-2-ingestion.md  2026-07-14-phase-3-rules-filter.md  2026-07-15-phase-4-rdap-verification.md  2026-07-16-phase-5a-comps-grounding.md  2026-07-18-phase-5b-toxicity-gate.md
domainscout/: __init__.py  __main__.py  commands.py  comps.py  config.py  db.py  doh.py  filters.py  ingest.py  lifecycle.py  models.py  pronounce.py  pronounce_tables.json  ratelimit.py  rdap.py  toxicity.py
domainscout/scoring/: __init__.py
domainscout/sources/: __init__.py  base.py  dynadot.py  whoisfreaks.py
domainscout/web/: __init__.py
tests/: test_cli.py  test_comps.py  test_config.py  test_db.py  test_doh.py  test_filters.py  test_gate.py  test_ingest.py  test_lifecycle.py  test_models.py  test_package.py  test_pronounce.py  test_ratelimit.py  test_rdap.py  test_sources.py  test_toxicity.py
tests/fixtures/: cdx_longlived.json  cdx_tail_flip.json  namebio_retailstats_small.csv  namebio_tldstats_small.csv  whoisfreaks-sample.csv
