[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domainscout"
version = "0.1.0"
description = "Personal expired-domain discovery pipeline (.com)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx", "truststore", "wordfreq", "whodap"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
domainscout = "domainscout.__main__:main"

[tool.setuptools]
packages = ["domainscout", "domainscout.sources", "domainscout.scoring", "domainscout.web"]

[tool.setuptools.package-data]
domainscout = ["pronounce_tables.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
